# team_task_manager

./: .env.example  .gitignore  README.md  pyproject.toml
bot/: core.py  states.py  utils.py
bot/data/: quiz_questions.json
bot/handlers/: __init__.py  admin_stats.py  ai_chat.py  currency.py  games.py  help.py  menu.py  music.py  quiz.py  start.py  tasks.py  weather.py
bot/management/commands/: start_bot.py
bot/utils/: __init__.py  daily_report.py  telegram_notifications.py
config/: asgi.py  settings.py  urls.py
static/css/: main.css
static/js/: main.js  task_manager.js
tasks/: admin.py  consumers.py  forms.py  models.py  serializers.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_task_options_alter_task_assigned_to_and_more.py  0003_alter_task_options.py  0004_alter_task_assigned_to_alter_task_created_at_and_more.py  0005_task_created_by.py  0006_alter_task_created_at.py
templates/: api_wrapper.html  base.html
templates/rest_framework/: api.html  base.html
templates/tasks/: landing.html  quick_create.html  task_list.html
templates/users/: login.html  register.html
users/: admin.py  forms.py  models.py  views.py
users/migrations/: 0001_initial.py  0002_user_phone.py
